kepco/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kepco
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: kepco
  template:
    metadata:
      labels:
        app: kepco
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: kepco
          image: ghcr.io/noeulnight/kepco:latest
          ports:
            - containerPort: 3000
